--- a/app/src/main/res/menu/bottom_navbar.xml
+++ b/app/src/main/res/menu/bottom_navbar.xml
@@ -7,9 +7,9 @@
     <item android:title="@string/research"
         android:icon="@drawable/baseline_research_24"
         android:id="@+id/research"/>
-    <item android:title="@string/archive"
-        android:icon="@drawable/baseline_archive_24"
-        android:id="@+id/archive"/>
+    <item android:title="@string/call_for_doctor"
+        android:icon="@drawable/baseline_emergency_24"
+        android:id="@+id/call"/>
     <item android:title="@string/profile"
         android:icon="@drawable/baseline_person_24"
         android:id="@+id/profile"/>
