--- a/app/src/main/res/menu/bottom_navbar.xml
+++ b/app/src/main/res/menu/bottom_navbar.xml
@@ -10,6 +10,9 @@
     <item android:title="@string/call_for_doctor"
         android:icon="@drawable/baseline_emergency_24"
         android:id="@+id/call"/>
+    <item android:title="@string/services"
+        android:icon="@drawable/baseline_medical_services_24"
+        android:id="@+id/services"/>
     <item android:title="@string/profile"
         android:icon="@drawable/baseline_person_24"
         android:id="@+id/profile"/>
