--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="light_blue">#78C0E0</color>
     <color name="blue">#449DD1</color>
     <color name="cream">#FCE4D8</color>
+    <color name="red">#d7253d</color>
 </resources>
