--- a/app/src/main/res/layout/fragment_person.xml
+++ b/app/src/main/res/layout/fragment_person.xml
@@ -35,10 +35,9 @@
 
                 <TextView
                     android:id="@+id/nameField"
-                    android:layout_marginTop="15dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="@string/nameTextField" />
+                    android:layout_marginTop="15dp" />
 
             </LinearLayout>
 
