--- a/app/src/main/res/layout/fragment_person.xml
+++ b/app/src/main/res/layout/fragment_person.xml
@@ -37,6 +37,7 @@
                     android:id="@+id/nameField"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:text="@string/profile"
                     android:layout_marginTop="15dp" />
 
             </LinearLayout>
