--- a/app/src/main/res/layout/fragment_non_authorized.xml
+++ b/app/src/main/res/layout/fragment_non_authorized.xml
@@ -15,18 +15,18 @@
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/LoginEmailField"
             android:layout_width="match_parent"
-            android:hint="example@email.com"
+            android:hint="@string/example_email_com"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:inputType="text" />
+            android:inputType="textEmailAddress" />
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/LoginPasswordField"
-            android:hint="Password"
+            android:hint="@string/password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:inputType="text" />
+            android:inputType="textPassword" />
 
         <Space
             android:layout_width="match_parent"
