--- a/app/src/main/res/menu/bottom_navbar.xml
+++ b/app/src/main/res/menu/bottom_navbar.xml
@@ -1,19 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:title="@string/queue"
-          android:icon="@drawable/baseline_add_to_queue_24"
-          android:id="@+id/queue"/>
-    <item android:title="@string/research"
-        android:icon="@drawable/baseline_research_24"
-        android:id="@+id/research"/>
-    <item android:title="@string/call_for_doctor"
-        android:icon="@drawable/baseline_emergency_24"
-        android:id="@+id/call"/>
-    <item android:title="@string/services"
-        android:icon="@drawable/baseline_medical_services_24"
-        android:id="@+id/services"/>
+    <item android:title="@string/home"
+          android:icon="@drawable/baseline_home_24"
+          android:id="@+id/home"/>
+    <item android:title="@string/clinics"
+        android:icon="@drawable/baseline_apartment_24"
+        android:id="@+id/clinics"/>
     <item android:title="@string/profile"
         android:icon="@drawable/baseline_person_24"
         android:id="@+id/profile"/>
+
 </menu>
