--- a/app/src/main/res/layout/fragment_doctors_appointment.xml
+++ b/app/src/main/res/layout/fragment_doctors_appointment.xml
@@ -23,7 +23,7 @@
 
         <FrameLayout
             android:layout_width="match_parent"
-            android:layout_height="247dp">
+            android:layout_height="203dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -63,6 +63,23 @@
         </FrameLayout>
 
         <FrameLayout
+            android:id="@+id/button_field"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            >
+
+            <Button
+                android:id="@+id/date_time_btn"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:visibility="gone"
+                android:text="@string/select_date" />
+        </FrameLayout>
+
+        <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center">
@@ -71,7 +88,9 @@
                 android:id="@+id/registerButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Button" />
+                android:layout_marginStart="10dp"
+                android:layout_marginEnd="10dp"
+                android:text="@string/make_an_appointment" />
         </FrameLayout>
 
     </LinearLayout>
