--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -15,6 +15,8 @@
             android:id="@+id/RegistrationEmailField"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
             android:ems="10"
             android:hint="@string/example_email_com"
             android:inputType="textEmailAddress" />
@@ -23,6 +25,8 @@
             android:id="@+id/RegistrationPasswordField"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
             android:ems="10"
             android:hint="@string/password"
             android:inputType="textPassword" />
@@ -42,7 +46,9 @@
             android:id="@+id/RegistrationButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Register" />
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:text="@string/register_button_text" />
 
         <Space
             android:layout_width="match_parent"
@@ -54,7 +60,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:onClick="goToLogin"
-            android:text="Login" />
+            android:text="@string/login_field_text" />
 
     </LinearLayout>
 </FrameLayout>
