--- a/app/src/main/res/layout/login_authorized.xml
+++ b/app/src/main/res/layout/login_authorized.xml
@@ -17,6 +17,8 @@
             android:layout_width="match_parent"
             android:hint="@string/example_email_com"
             android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
             android:ems="10"
             android:inputType="textEmailAddress" />
 
@@ -25,6 +27,8 @@
             android:hint="@string/password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
             android:ems="10"
             android:inputType="textPassword" />
 
@@ -43,7 +47,9 @@
             android:id="@+id/LoginButton"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Login" />
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:text="@string/login_button_text" />
 
         <Space
             android:layout_width="match_parent"
@@ -55,7 +61,7 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:onClick="goToRegistration"
-            android:text="Registration" />
+            android:text="@string/registration_field_text" />
 
     </LinearLayout>
 </FrameLayout>
