--- a/app/src/main/res/layout/fragment_clinics.xml
+++ b/app/src/main/res/layout/fragment_clinics.xml
@@ -6,54 +6,60 @@
     android:padding="16dp">
 
     <!-- Картинка для фотографии -->
-    <ImageView
-        android:id="@+id/imageView"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        android:src="@drawable/default_clinic_image"
-        android:scaleType="centerCrop"
-        tools:src="@drawable/default_clinic_image" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:scaleType="centerCrop"
+            android:src="@drawable/default_clinic_image"
+            tools:src="@drawable/default_clinic_image" />
+
+        <LinearLayout
+            android:layout_width="273dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="end"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="16dp"
+            android:orientation="vertical">
+
+            <!-- Название клиники -->
+            <TextView
+                android:id="@+id/textViewName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Санаторий"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                tools:text="Санаторий" />
+
+            <!-- Адрес клиники -->
+            <TextView
+                android:id="@+id/textViewAddress"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Революционная ул., 46"
+                android:textSize="14sp"
+                tools:text="Революционная ул., 46" />
+
+            <!-- Телефон клиники -->
+            <TextView
+                android:id="@+id/textViewPhone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="+7 (846) 267-47-38"
+                android:textSize="14sp"
+                tools:text="+7 (846) 267-47-38" />
+
+
+        </LinearLayout>
+    </LinearLayout>
 
     <!-- Контейнер для контактных данных -->
-    <LinearLayout
-        android:layout_width="257dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="end"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
-        android:orientation="vertical">
-
-        <!-- Название клиники -->
-        <TextView
-            android:id="@+id/textViewName"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Название клиники"
-            android:textSize="18sp"
-            android:textStyle="bold"
-            tools:text="Санаторий" />
-
-        <!-- Адрес клиники -->
-        <TextView
-            android:id="@+id/textViewAddress"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Адрес клиники"
-            android:textSize="14sp"
-            tools:text="Революционная ул., 46" />
-
-        <!-- Телефон клиники -->
-        <TextView
-            android:id="@+id/textViewPhone"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Телефон клиники"
-            android:textSize="14sp"
-            tools:text="+7 (846) 267-47-38" />
-
-
-
-    </LinearLayout>
 
 </FrameLayout>
